--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -49,7 +49,8 @@
 </head>
 <body>
     <header>
-        <h1>MODEST-25SPZ Conference</h1>
+        <h1>MODEST-25SPZ</h1>
+	<p>19-23 May 2025, The Netherlands</p>
     </header>
     <nav>
         <a href="#about">About</a>
@@ -149,4 +150,3 @@
     </footer>
 </body>
 </html>
-
