--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -57,6 +57,7 @@
         <a href="#organisers">Organisers</a>
         <a href="#location">Location</a>
         <a href="#topics">Topics</a>
+        <a href="#programme">Programme</a>
         <a href="#registration">Registration</a>
         <a href="#contact">Contact</a>
     </nav>
@@ -136,6 +137,18 @@
 	honoree’s legacy by uniting diverse expertise to address some of the
 	most profound scientific questions of our time.
         </p>
+    </section>
+    <section id="programme">
+	<h2>Programme</h2>
+	<p>TBD</p>
+	<h3>Preliminary Programme</h3>
+	<p>
+	Monday: Modelling Dense Stellar Systems<br>
+	Tuesday: binary and triple population synthesis<br>
+	Wednesday: Multi-scale and multi-physics modeling<br>
+	Thursday: High-performance computing<br>
+	Friday: Origin of planetary systems, the Solar system and the Oort cloud
+	</p>
     </section>
     <section id="registration">
         <h2>Registration</h2>
