--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -143,16 +143,35 @@
 	<p>TBD</p>
 	<h3>Preliminary Programme</h3>
 	<p>
-	Monday: Modelling Dense Stellar Systems<br>
-	Tuesday: binary and triple population synthesis<br>
-	Wednesday: Multi-scale and multi-physics modeling<br>
-	Thursday: High-performance computing<br>
-	Friday: Origin of planetary systems, the Solar system and the Oort cloud
+	The programme will focus on Simon's main interests:
+	<ul>
+		<li>High performance computing</li>
+		<li>Modelling dense stellar systems</li>
+		<li>Multi-scale and multi-physics modelling</li>
+		<li>Planetary systems, the Solar system and the Oort cloud</li>
+		<li>Stellar systems, Binary and Triple population synthesis</li>
+	</ul>
 	</p>
     </section>
     <section id="registration">
         <h2>Registration</h2>
-        <p>Registration will be by invitation.</p>
+	    <p>
+	    	Note that the meeting is limited to 50 participants, and registration does not imply admission to the meeting.
+		We will inform participants on their admission by March 31st at the latest.
+	    </p>
+        <h3>Important dates</h3>
+	    <p>
+		March 14th - registration deadline and abstract deadline<br />
+		March 31st - notification of acceptance to the meeting and talks<br />
+	    </p>
+	<h3>Registration fee</h3>
+	    <p>
+		The meeting will cost approximately €150, final cost TBA.
+	    </p>
+	<h3>Registration form</h3>
+	    <p>
+		Register via <a href="https://docs.google.com/forms/d/e/1FAIpQLSeVahxX7zEHS9rqBl_d1R_Ex1wSwpTJ0DUyinQnTYH49ub-ug/viewform?usp=dialog">this form</a>.
+	    </p>
     </section>
     <section id="contact">
         <h2>Contact</h2>
