--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -69,7 +69,8 @@
 	birthday and a prolific career in computational astrophysics.  The
 	meeting will be held <b>from 19 to 23 May 2025</b> and accommodate some
 	50 researchers over all career levels in astronomy, computer science
-	and mathematics.
+	and mathematics.<br />
+	<b>Note</b>: this meeting is not the same as MODEST-25!
 	</p>
 
     </section>
