--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -107,7 +107,7 @@
     </section>
     <section id="location">
         <h2>Location</h2>
-        <p>Details about the venue to follow.</p>
+        <p>The meeting will held be at <a href="https://www.academiehuis.nl/en">Academiehuis Zwolle</a> (also known as the Grote Kerk), in the <a href="https://geohack.toolforge.org/geohack.php?language=en&params=52_30_42_N_6_5_31_E_type:landmark&pagename=Grote_of_Sint-Micha%C3%ABlskerk_(Zwolle)">center of town</a>.</p>
     </section>
     <section id="topics">
         <h2>Topics</h2>
