--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -158,16 +158,17 @@
         <h2>Registration</h2>
 	    <p>
 	    	Note that the meeting is limited to 50 participants, and registration does not imply admission to the meeting.
-		We will inform participants on their admission by March 31st at the latest.
+		We will inform participants on their admission by April 30th at the latest.
 	    </p>
         <h3>Important dates</h3>
 	    <p>
-		March 14th - registration deadline and abstract deadline<br />
+		<s>March 14th - registration deadline and abstract deadline</s><br />
 		March 31st - notification of acceptance to the meeting and talks<br />
+	        April 30th - extended registration deadline<br />
 	    </p>
 	<h3>Registration fee</h3>
 	    <p>
-		The meeting will cost approximately €150, final cost TBA.
+		The meeting will cost €160.
 	    </p>
 	<h3>Registration form</h3>
 	    <p>
