updated programme MODEST-25SPZ

--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -108,6 +108,7 @@
     <section id="location">
         <h2>Location</h2>
         <p>The meeting will held be at <a href="https://www.academiehuis.nl/en">Academiehuis Zwolle</a> (also known as the Grote Kerk), in the <a href="https://geohack.toolforge.org/geohack.php?language=en&params=52_30_42_N_6_5_31_E_type:landmark&pagename=Grote_of_Sint-Micha%C3%ABlskerk_(Zwolle)">center of town</a>.</p>
+        <p>Zwolle is directly reachable by train from Amsterdam Schiphol Airport, for the train schedule see <a href="https://www.ns.nl/en/">the NS website</a></p>
     </section>
     <section id="topics">
         <h2>Topics</h2>
@@ -141,18 +142,64 @@
     </section>
     <section id="programme">
 	<h2>Programme</h2>
-	<p>TBD</p>
-	<h3>Preliminary Programme</h3>
-	<p>
-	The programme will focus on Simon's main interests:
+	
+    <h3>Monday 19th: Modelling dense stellar systems</h3>
+    <ul>
+        <li>Simon's contributions to Star Clusters (Alison Sills)</li>
+        <li>Mark Gieles</li>
+        <li>Sara Rastello</li>
+        <li>M. Paola Vaccaro</li>
+        <li>Daniel Marín Pina</li>
+        <li>Roberto Capuzzo Dolcetta</li>
+    </ul>
+    <h3>Tuesday 20th (Morning): Multi-physics and multi-scale simulations</h3>
+    <ul>
+        <li>Simon's contributions to multi-physics and multi-scale simulations (Steven Rieder)</li>
+        <li>Christian Boily</li>
+        <li>Michiko Fujii</li>
+        <li>Alessandro Trani</li>
+    </ul>
+
+    <h3>Tuesday (afternoon): Stellar systems, binary and triple population synthesis</h3>
 	<ul>
-		<li>High performance computing</li>
-		<li>Modelling dense stellar systems</li>
-		<li>Multi-scale and multi-physics modelling</li>
-		<li>Planetary systems, the Solar system and the Oort cloud</li>
-		<li>Stellar systems, Binary and Triple population synthesis</li>
+        <li>Simon's contributions to stellar systems (Silvia Toonen)</li>
+        <li>Gijs Nelemans</li>
+        <li>Simon Goodwin</li>
 	</ul>
-	</p>
+
+    <h3>Wednesday (morning): Stellar systems, binary and triple population synthesis (continued)</h3>
+	<ul>
+        <li>Michela Mapelli</li>
+        <li>Nathan Leigh</li>
+        <li>special talk: Ed van den Heuvel</li>
+        <li>special talk: Junichiro Makino</li>
+        <li>special talk: Piet Hut</li>
+	</ul>
+
+    <h3>Wednesday (afternoon): social event (boat tour)</h3>
+
+    <h3>Wednesday (evening): dinner</h3>
+    <ul>
+        <li>special talk: Simon Portegies Zwart</li>
+    </ul>
+
+    <h3>Thursday: Planetary systems, the Solar system and the Oort cloud</h3>
+	<ul>
+        <li>Simon's contributions to planets (Thijs Kouwenhoven)</li>
+        <li>Susanne Pfalzner</li>
+        <li>Sergio Gomes</li>
+        <li>Santiago Torres</li>
+        <li>Jose Luis Gragera Más</li>
+	</ul>
+
+    <h3>Friday (morning): High-performance computing</h3>
+	<ul>
+        <li>Simon's contributions to High-performance computing (Derek Groen + Steven Rieder)</li>
+        <li>Lourens Veen</li>
+        <li>Peter Teuben</li>
+        <li>Derek Groen</li>
+	</ul>
+
     </section>
     <section id="registration">
         <h2>Registration</h2>
@@ -163,7 +210,7 @@
         <h3>Important dates</h3>
 	    <p>
 		<s>March 14th - registration deadline and abstract deadline</s><br />
-		March 31st - notification of acceptance to the meeting and talks<br />
+        <s>March 31st - notification of acceptance to the meeting and talks</s><br />
 	        April 30th - extended registration deadline<br />
 	    </p>
 	<h3>Registration fee</h3>
