--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -152,6 +152,8 @@
         <li>Daniel Marín Pina</li>
         <li>Roberto Capuzzo Dolcetta</li>
     </ul>
+    <h3>Monday 19th (evening): Borrel (welcome drinks)</h3>
+
     <h3>Tuesday 20th (Morning): Multi-physics and multi-scale simulations</h3>
     <ul>
         <li>Simon's contributions to multi-physics and multi-scale simulations (Steven Rieder)</li>
