--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -142,19 +142,24 @@
     </section>
     <section id="programme">
 	<h2>Programme</h2>
+    <p>Note: subject to change</p>
 	
-    <h3>Monday 19th: Modelling dense stellar systems</h3>
+    <h3>Monday 19th (9:30): Modelling dense stellar systems</h3>
     <ul>
+        <li>Opening</li>
         <li>Simon's contributions to Star Clusters (Alison Sills)</li>
         <li>Mark Gieles</li>
         <li>Sara Rastello</li>
+    </ul>
+    <h3>Monday 19th (14:00): Modelling dense stellar systems (continued)</h3>
+    <ul>
         <li>M. Paola Vaccaro</li>
         <li>Daniel Marín Pina</li>
         <li>Roberto Capuzzo Dolcetta</li>
     </ul>
-    <h3>Monday 19th (evening): Borrel (welcome drinks)</h3>
+    <h3>Monday 19th (17:00): Borrel (welcome drinks)</h3>
 
-    <h3>Tuesday 20th (Morning): Multi-physics and multi-scale simulations</h3>
+    <h3>Tuesday 20th (9:30): Multi-physics and multi-scale simulations</h3>
     <ul>
         <li>Simon's contributions to multi-physics and multi-scale simulations (Steven Rieder)</li>
         <li>Christian Boily</li>
@@ -162,14 +167,14 @@
         <li>Alessandro Trani</li>
     </ul>
 
-    <h3>Tuesday (afternoon): Stellar systems, binary and triple population synthesis</h3>
+    <h3>Tuesday 20th (14:00): Stellar systems, binary and triple population synthesis</h3>
 	<ul>
         <li>Simon's contributions to stellar systems (Silvia Toonen)</li>
         <li>Gijs Nelemans</li>
         <li>Simon Goodwin</li>
 	</ul>
 
-    <h3>Wednesday (morning): Stellar systems, binary and triple population synthesis (continued)</h3>
+    <h3>Wednesday 21st (9:30): Stellar systems, binary and triple population synthesis (continued)</h3>
 	<ul>
         <li>Michela Mapelli</li>
         <li>Nathan Leigh</li>
@@ -178,28 +183,32 @@
         <li>special talk: Piet Hut</li>
 	</ul>
 
-    <h3>Wednesday (afternoon): social event (boat tour)</h3>
+    <h3>Wednesday 21st (15:00-17:00): social event (boat tour)</h3>
 
-    <h3>Wednesday (evening): dinner</h3>
+    <h3>Wednesday 21st (18:30): dinner</h3>
     <ul>
         <li>special talk: Simon Portegies Zwart</li>
     </ul>
 
-    <h3>Thursday: Planetary systems, the Solar system and the Oort cloud</h3>
+    <h3>Thursday 22nd (9:30): Planetary systems, the Solar system and the Oort cloud</h3>
 	<ul>
         <li>Simon's contributions to planets (Thijs Kouwenhoven)</li>
         <li>Susanne Pfalzner</li>
         <li>Sergio Gomes</li>
+    </ul>
+    <h3>Thursday 22nd (14:00): Planetary systems, the Solar system and the Oort cloud (continued)</h3>
+    <ul>
         <li>Santiago Torres</li>
         <li>Jose Luis Gragera Más</li>
 	</ul>
 
-    <h3>Friday (morning): High-performance computing</h3>
+    <h3>Friday 23rd (9:30): High-performance computing</h3>
 	<ul>
         <li>Simon's contributions to High-performance computing (Derek Groen + Steven Rieder)</li>
         <li>Lourens Veen</li>
         <li>Peter Teuben</li>
         <li>Derek Groen</li>
+        <li>Closing</li>
 	</ul>
 
     </section>
