--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -143,44 +143,45 @@
     <section id="programme">
 	<h2>Programme</h2>
     <p>Note: subject to change</p>
+    <p>"Simon's contributions" talks are 20 minutes, other talks 15 minutes. Talks are followed by up to 30 minutes discussion.</p>
 	
-    <h3>Monday 19th (9:30): Modelling dense stellar systems</h3>
+    <h3>Monday 19th (9:30-12:30): Modelling dense stellar systems</h3>
     <ul>
         <li>Opening</li>
         <li>Simon's contributions to Star Clusters (Alison Sills)</li>
         <li>Mark Gieles</li>
         <li>M. Paola Vaccaro</li>
     </ul>
-    <h3>Monday 19th (14:00): Modelling dense stellar systems (continued)</h3>
+    <h3>Monday 19th (14:00-17:00): Modelling dense stellar systems (continued)</h3>
     <ul>
         <li>Daniel Marín Pina</li>
         <li>Roberto Capuzzo Dolcetta</li>
+	<li>Michiko Fujii</li>
     </ul>
     <h3>Monday 19th (17:00): Borrel (welcome drinks)</h3>
 
-    <h3>Tuesday 20th (9:30): Multi-physics and multi-scale simulations</h3>
+    <h3>Tuesday 20th (9:30-12:30): Multi-physics and multi-scale simulations</h3>
     <ul>
         <li>Simon's contributions to multi-physics and multi-scale simulations (Steven Rieder)</li>
         <li>Christian Boily</li>
-        <li>Michiko Fujii</li>
         <li>Alessandro Trani</li>
     </ul>
 
-    <h3>Tuesday 20th (14:00): Stellar systems, binary and triple population synthesis</h3>
+    <h3>Tuesday 20th (14:00-17:00): Stellar systems, binary and triple population synthesis</h3>
 	<ul>
         <li>Simon's contributions to stellar systems (Silvia Toonen)</li>
         <li>Gijs Nelemans</li>
         <li>Simon Goodwin</li>
 	</ul>
 
-    <h3>Wednesday 21st (9:30): Stellar systems, binary and triple population synthesis (continued)</h3>
+    <h3>Wednesday 21st (9:30-13:00): Stellar systems, binary and triple population synthesis (continued)</h3>
 	<ul>
         <li>Michela Mapelli</li>
-        <li>Nathan Leigh</li>
+	<li>special talk: Junichiro Makino</li>
         <li>special talk: Ed van den Heuvel</li>
-        <li>special talk: Junichiro Makino</li>
         <li>special talk: Piet Hut</li>
-	</ul>
+	<li>online talk: Peter Teuben</li>
+        </ul>
 
     <h3>Wednesday 21st (15:00-17:00): social event (boat tour)</h3>
 
@@ -189,26 +190,25 @@
         <li>special talk: Simon Portegies Zwart</li>
     </ul>
 
-    <h3>Thursday 22nd (9:30): Planetary systems, the Solar system and the Oort cloud</h3>
+    <h3>Thursday 22nd (9:30-12:30): Planetary systems, the Solar system and the Oort cloud</h3>
 	<ul>
         <li>Simon's contributions to planets (Thijs Kouwenhoven)</li>
         <li>Susanne Pfalzner</li>
         <li>Sergio Gomes</li>
     </ul>
-    <h3>Thursday 22nd (14:00): Planetary systems, the Solar system and the Oort cloud (continued)</h3>
+    <h3>Thursday 22nd (14:00-17:00): Planetary systems, the Solar system and the Oort cloud (continued)</h3>
     <ul>
         <li>Santiago Torres</li>
         <li>Jose Luis Gragera Más</li>
-	</ul>
+    </ul>
 
-    <h3>Friday 23rd (9:30): High-performance computing</h3>
+    <h3>Friday 23rd (9:30-12:30): High-performance computing</h3>
 	<ul>
         <li>Simon's contributions to High-performance computing (Derek Groen + Steven Rieder)</li>
         <li>Lourens Veen</li>
-        <li>Peter Teuben</li>
         <li>Derek Groen</li>
         <li>Closing</li>
-	</ul>
+    </ul>
 
     </section>
     <section id="registration">
