--- a/modest25spz/index.html
+++ b/modest25spz/index.html
@@ -155,32 +155,31 @@
     <ul>
         <li>Daniel Marín Pina</li>
         <li>Roberto Capuzzo Dolcetta</li>
-	<li>Michiko Fujii</li>
     </ul>
     <h3>Monday 19th (17:00): Borrel (welcome drinks)</h3>
 
     <h3>Tuesday 20th (9:30-12:30): Multi-physics and multi-scale simulations</h3>
     <ul>
+	<li>Michiko Fujii</li>
         <li>Simon's contributions to multi-physics and multi-scale simulations (Steven Rieder)</li>
         <li>Christian Boily</li>
-        <li>Alessandro Trani</li>
     </ul>
 
     <h3>Tuesday 20th (14:00-17:00): Stellar systems, binary and triple population synthesis</h3>
-	<ul>
-        <li>Simon's contributions to stellar systems (Silvia Toonen)</li>
-        <li>Gijs Nelemans</li>
+    <ul>
+	<li>Alessandro Trani</li>
+        <li>Simon's contributions to stellar systems (Gijs Nelemans)</li>
         <li>Simon Goodwin</li>
-	</ul>
+    </ul>
 
     <h3>Wednesday 21st (9:30-13:00): Stellar systems, binary and triple population synthesis (continued)</h3>
-	<ul>
+    <ul>
         <li>Michela Mapelli</li>
 	<li>special talk: Junichiro Makino</li>
         <li>special talk: Ed van den Heuvel</li>
         <li>special talk: Piet Hut</li>
 	<li>online talk: Peter Teuben</li>
-        </ul>
+    </ul>
 
     <h3>Wednesday 21st (15:00-17:00): social event (boat tour)</h3>
 
@@ -190,18 +189,18 @@
     </ul>
 
     <h3>Thursday 22nd (9:30-12:30): Planetary systems, the Solar system and the Oort cloud</h3>
-	<ul>
-        <li>Simon's contributions to planets (Thijs Kouwenhoven)</li>
+    <ul>
+        <li>Simon's contributions to planets (Santiago Torres)</li>
         <li>Susanne Pfalzner</li>
+	<li>Sergio Gomes</li>
     </ul>
     <h3>Thursday 22nd (14:00-17:00): Planetary systems, the Solar system and the Oort cloud (continued)</h3>
     <ul>
-        <li>Santiago Torres</li>
-        <li>Sergio Gomes</li>
+        <li>Discussion</li>
     </ul>
 
     <h3>Friday 23rd (9:30-12:30): High-performance computing</h3>
-	<ul>
+    <ul>
         <li>Simon's contributions to High-performance computing (Derek Groen + Steven Rieder)</li>
         <li>Lourens Veen</li>
         <li>Derek Groen</li>
